# checkbox

./: .env  .pre-commit-config.yaml  Dockerfile  Dockerfile_db  README.md  docker-compose.yml  dump_06-05-2024_10_23_32.sql  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: auto-author-assign.yml  auto-format.yml
app/: crud.py  dependencies.py  logger.py  main.py  models.py  schemas.py
app/api/endpoints/: auth.py  receipt.py
app/core/: config.py
app/tests/: conftest.py  test_auth.py  test_crud.py  test_receipt.py
app/tests/utils/: utils.py
